# ormpindexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package.json
.github/workflows/: check.yml  release.yml
migrations/: 0001_schema_compat.sql  0002_block_anchor.sql  0002_runtime_checkpoint.sql
scripts/: patch-subsquid-evm-processor.js
src/: checkpoint.rs  config.rs  config.ts  database.rs  datalens.rs  decoder.rs  lib.rs  main.rs  main.ts  ops.rs  planner.rs  runner.rs  runtime.rs  schema.rs  types.ts  warmup.rs
src/datalens/: client.rs  mod.rs  query.rs  retry.rs  types.rs
src/decoder/: abi.rs  evm.rs  mod.rs  tron.rs  types.rs
src/graphql/: mod.rs  pagination.rs  query.rs  root.rs  router.rs  types.rs
src/schema/: assignments.rs  mod.rs  rows.rs  tables.rs  types.rs
tests/: datalens_client.rs  datalens_planner.rs  datalens_warmup.rs  evm_decoder.rs  graphql_server.rs  legacy_parity.rs  ops_endpoints.rs  postgres_writer.rs  runtime_config.rs  runtime_runner.rs  runtime_skeleton.rs  schema_compatibility.rs  tron_decoder.rs
tests/legacy_parity_support/: fixtures.rs  mod.rs  rows.rs  values.rs
tests/runtime_support/: mod.rs
