[package]
name = "ormpindexer"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.30"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt"] }
