[package]
name = "ormpindexer"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
ethabi = "18.0.0"
hex = "0.4.3"
log = "0.4.30"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt"] }
